--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,10 +1,26 @@
+upstream nodeserver {
+    server localhost:6000;
+}
+
+error_log /var/log/nginx/error.log;
+
 server {
+    listen 80;
+    server_name wa.botap.in;
+    access_log /var/log/nginx/access.log;
+    root /usr/src/app;
+
     location / {
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
 
-        proxy_pass http://nodeserver:6000;
+        proxy_pass http://nodeserver;
+    }
+
+    error_page   500 502 503 504  /50x.html;
+    location = /50x.html {
+        root   /usr/share/nginx/html;
     }
 }
