--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -6,6 +6,7 @@ error_log /var/log/nginx/error.log;
 
 server {
     listen 80;
+    listen [::]:80;
     server_name wa.botap.in;
     access_log /var/log/nginx/access.log;
     root /usr/src/app;
